# Design-modeling-and-control-of-a-low-cost-air-bearing-platform

./: .gitignore  README.md
3D_models/: A10_Part_1_support_PET_bottle.stl  A11_Part_2_support_PET_bottle.stl  A12_Part_1_support_pressure_regulator.stl  A13_Part_2_support_pressure_regulator.stl  A14_Main_part_box_electronic_boards.stl  A15_Bottom_part_box_electronic_boards.stl  A16_Top_cover_box_electronic_boards.stl  A17_Main_part_bracket_IMU.stl  A18_Bracket_hold_IMU_case.stl  A19_Bracket_battery.stl  A1_Air_bearing_base.stl  A20_Support_ArUco_marker.stl  A21_Part_1_auxiliary_support_ArUco.stl  A22_Part_2_auxiliary_support_ArUco.stl  A23_Support_servo_camera_calibration.stl  A24_Support_table_camera_calibration.stl  A25_Lower_disc_RW_characterization_struture.stl  A26_Upper_disc_RW_characterization_struture.stl  A27_Bearing_support_RW_characterization_struture.stl  A28_Support_line_RW_characterization_struture.stl  A29_Support_motor_load_cell_without_duct.stl  A2_Air_bearing_cover.stl  A30_Support_motor_load_cell_45mm_duct.stl  A31_Support_motor_load_cell_55mm_duct.stl  A3_Air_bearing_fixing_bracket.stl  A4_Spherical_bearing_support.stl  A5_Bottom_floor_platform.stl  A6_Cover_reaction_wheel.stl  A7_Bottom_floor_motor_bracket.stl  A8_Top_floor_platform.stl  A9_Disturbance_motor_bracket.stl
Codes/ESP32/Air-Bearing Platform/: platformio.ini
Codes/ESP32/Air-Bearing Platform/src/: gpios.h  hid.cpp  i2c.cpp  i2c.h  interrupts.cpp  interrupts.h  main.cpp  message.cpp  message.h  motors.cpp  motors.h  radio.cpp  radio.h  tasks.cpp  tasks.h
Codes/ESP32/Pressure Measurement System/src/: analog.cpp  analog.h  gpios.h  hid.cpp  hid.h  main.cpp  sd_card.cpp  sd_card.h  tasks.cpp  tasks.h
Codes/ESP32/Thrust Measurement System/: platformio.ini
Codes/ESP32/Thrust Measurement System/src/: gpios.h  hid.cpp  hid.h  interrupts.cpp  interrupts.h  load_cell.cpp  load_cell.h  main.cpp  (+6 more)
Codes/PC/C++/: .gitignore  CMakeLists.txt
Codes/PC/C++/data/: AMatrixDLMIController.csv  BMatrixDLMIController.csv  DLQRRotationalController.csv  DMatrixDLMIController.csv  xAxisInclinationGrid.csv  yAxisInclinationGrid.csv
Codes/PC/C++/src/: control.cpp  control.h  data_storage.cpp  data_storage.h  data_structures.h  extra.cpp  extra.h  hardware.cpp  hardware.h  main.cpp  message.cpp  message.h  radio.cpp  radio.h  timer.cpp  timer.h  vision.cpp  vision.h
Codes/PC/C++/utils/: calibration_data_4x4_50_1280x720.txt  camera_latency.cpp  camera_parameters.cpp  gyroscope_calibration.cpp
PCBs/Primary_Circuit_Board/: Componentes  My_Library.bak  My_Library.kicad_sym  Primary_Circuit_Board.kicad_pcb  Primary_Circuit_Board.kicad_prl  Primary_Circuit_Board.kicad_pro  Primary_Circuit_Board.kicad_sch  Primary_Circuit_Board.step  fp-info-cache  fp-lib-table
PCBs/Primary_Circuit_Board/My_Library.pretty/: B-G431B-ESC1.kicad_mod  XL6009_2A_Module.kicad_mod
PCBs/Secondary_Circuit_Board/: Conn_02x05.kicad_mod  NRF24L01.kicad_mod  PADS_COMPRIDOS_VQFN-16-1EP_3x3mm_P0.5mm_EP1.8x1.8mm.kicad_mod  Secondary_Circuit_Board.kicad_pcb  Secondary_Circuit_Board.kicad_prl  Secondary_Circuit_Board.kicad_pro  Secondary_Circuit_Board.kicad_sch  Secondary_Circuit_Board.step  actuators.kicad_sch  i2c.kicad_sch  mcu.kicad_sch  power_supply.kicad_sch  radio.kicad_sch  sensors.kicad_sch  spi.kicad_sch  ~Secondary_Circuit_Board.kicad_sch.lck
PCBs/Secondary_Circuit_Board/My_Library.pretty/: ESP32.kicad_mod
(+371 files in other folders)
